# Healthcare-data

./: .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-train.txt  requirements.txt
.github/workflows/: retrain.yml
app/: database.py  main.py  models.py  predict.py  schemas.py
dags/: retrain_dag.py
frontend/: index.html
ml/: preprocess.py  train.py
models/: .gitkeep  encoders.joblib
scripts/: clean.py  ingest.py  kenyanize.py  load.py
tests/: conftest.py  test_api.py
