[project]
name = "afyapredict-ke"
version = "1.0.0"
description = "Kenyan Clinical Test Result Predictor powered by ML – AfyaPredict KE"
requires-python = ">=3.11"
authors = [{ name = "AfyaPredict KE Team" }]
keywords = ["machine-learning", "kenya", "healthcare", "mlops", "fastapi"]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"